--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
+.App{
+  width: 100%;
+  height:100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu{
+  width: 85%;
+  height: 75vh;
+  border: 2px solid black;
+  margin: 0 auto;
+  margin-top:15px;
+  background-color: rgba(29, 29, 255, 0.815);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menu1{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+
+.btn{
+  width: 50%;
+  margin: 0 auto;
+  margin-top:20px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.button{
+  padding: 35px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 22px;
+  font-family: Arial, Helvetica, sans-serif;
+  clip-path: circle(34.7% at 50% 50%);
+ 
+  background-color: rgba(32, 222, 247, 0.918);
+}
+.button:hover{
   color: white;
+  background-color: rgba(3, 115, 129, 0.918);
 }
 
-.App-link {
-  color: #61dafb;
+.btn button:focus {
+  color: white;
+  background-color: rgb(6, 214, 6);
+}
+.src{
+  margin-top:25px;
+ 
+}
+.src img{
+  border-radius:50%;
+  border: 1px solid black;
+  object-fit: cover;
+  transition: 0.5s;
+}
+.name{
+  padding-left:12%;
+  padding-top:20px;
+}
+.name h2{
+  width: 500px;
+  font-size:38px;
+  color: #fff;
+  font-weight: 550;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.antd{
+  padding-left:12%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.by{
+  padding-left:5%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  color: #fff;
+}
+.text h1{
+ color:#fff;
+ padding-left:12%;
+ padding-top:25px;
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.text1{
+  padding-top:10px;
+  display: flex;
+  padding-left:12%;
+  font-size: 16px;
+  color: #fff;
+}
+.icon{
+  color:rgb(6, 218, 6);
+}
+.text2{
+  padding-left:20%;
+}
+.mada  {
+  width:36%;
+  border: 1px solid rgb(0, 255, 0);
+  padding-left:7%;
+  padding-top:10px;
+  background-color: rgb(19, 201, 19);
+  border-radius:50px;
+  margin-top:20px;
+  margin-left:12%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  transition: 0.5s;
+}
+.mada h2{
+  color: #fff;
+  transition: 0.5s;
+}
+.mada:hover {
+ 
+  background-color: #fff;
+}
+.mada h2:hover{
+  color: green;
 }
